[gd_scene load_steps=6 format=3 uid="uid://dpo2caay8labl"]

[ext_resource type="PackedScene" uid="uid://bc28pv7wmkxgr" path="res://levels/three_room_dungeon.tscn" id="1_qwsle"]
[ext_resource type="Script" path="res://main_scenes/game_scene.gd" id="1_v6a74"]
[ext_resource type="PackedScene" uid="uid://ctmrulo45br7" path="res://gui/gui.tscn" id="2_6xb1b"]
[ext_resource type="Texture2D" uid="uid://dq6hlkvym48ok" path="res://assets/gui/A_Accept1.png" id="4_w07wg"]
[ext_resource type="Texture2D" uid="uid://bax0omkn0j1hy" path="res://assets/pig.jpg" id="5_q6toa"]

[node name="GameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v6a74")

[node name="Dungeon" parent="." instance=ExtResource("1_qwsle")]
position = Vector2(-2, -11)
metadata/_edit_lock_ = true

[node name="GUI" parent="." instance=ExtResource("2_6xb1b")]

[node name="GoButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 1160.0
offset_top = 480.0
offset_right = 1272.0
offset_bottom = 704.0
text = "GO"
icon = ExtResource("4_w07wg")
flat = true

[node name="Party" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(0, -64)
scale = Vector2(0.0277778, 0.0277777)
texture = ExtResource("5_q6toa")

[connection signal="event_completed" from="." to="." method="_on_event_completed"]
[connection signal="pressed" from="GoButton" to="." method="_on_go_button_pressed"]
